# final_project_hacktiv8

./: README.md  app.py  chatbot.db  config.py  database.py  document_processor.py  pyproject.toml  rag_pipeline.py  requirements.txt  run.py  styles.css  test_heri.txt  vector_store_manager.py
